# Copyright 2024 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc/toolchains:args.bzl", "cc_args")
load("@rules_cc//cc/toolchains:feature.bzl", "cc_feature")

cc_args(
    name = "warnings",
    actions = [
        "@rules_cc//cc/toolchains/actions:c_compile",
        "@rules_cc//cc/toolchains/actions:cpp_compile_actions",
    ],
    args = [
        "-Wall",
        "-Wextra",
        # "-Wpedantic",
    ],
    visibility = ["//visibility:public"],
)

cc_args(
    name = "no_absolute_paths_for_builtins",
    actions = [
        "@rules_cc//cc/toolchains/actions:compile_actions",
    ],
    args = [
        "-no-canonical-prefixes",
        "-fno-canonical-system-headers",
    ],
    visibility = ["//visibility:public"],
)

cc_args(
    name = "opt_compile_flags",
    actions = [
        "@rules_cc//cc/toolchains/actions:c_compile",
        "@rules_cc//cc/toolchains/actions:cpp_compile_actions",
    ],
    args = [
        "-g",
        "-O2",
        "-D_FORTIFY_SOURCE=1",
        "-DNDEBUG",
        "-ffunction-sections",
        "-fdata-sections",
    ],
    visibility = ["//visibility:public"],
)

cc_feature(
    name = "opt_compile_flags_feature",
    args = [":opt_compile_flags"],
    overrides = "@rules_cc//cc/toolchains/features:opt",
    visibility = ["//visibility:public"],
)

cc_args(
    name = "dbg_compile_flags",
    actions = [
        "@rules_cc//cc/toolchains/actions:c_compile",
        "@rules_cc//cc/toolchains/actions:cpp_compile_actions",
    ],
    args = [
        "-g",
    ],
    visibility = ["//visibility:public"],
)

cc_feature(
    name = "dbg_compile_flags_feature",
    args = [":dbg_compile_flags"],
    overrides = "@rules_cc//cc/toolchains/features:dbg",
    visibility = ["//visibility:public"],
)

cc_args(
    name = "target",
    actions = [
        "@rules_cc//cc/toolchains/actions:compile_actions",
        "@rules_cc//cc/toolchains/actions:link_actions",
    ],
    args = select({
        "//toolchains/constraint:linux_aarch64": ["--target=aarch64-unknown-linux-gnu"],
        "//toolchains/constraint:linux_x86_64": ["--target=x86_64-linux-gnu"],
    }),
    visibility = ["//visibility:public"],
)
