load("@rules_cc//cc/toolchains:feature.bzl", "cc_feature")
load(":defs.bzl", "sonic_gcc_toolchain")

licenses(["notice"])

cc_feature(
    name = "external_include_paths",
    args = ["@rules_cc//cc/toolchains/args/external_include_paths"],
    feature_name = "external_include_paths",
    visibility = ["//visibility:public"],
)

sonic_gcc_toolchain(
    name = "linux_x86_64",
    gcc_repo = "@gcc-linux-x86_64",
    sysroot_repo = "@sysroot-bookworm//:directory",
    target_arch = "amd64",
)

sonic_gcc_toolchain(
    name = "cross_aarch64",
    gcc_repo = "@gcc-linux-aarch64",
    sysroot_repo = "@sysroot-bookworm//:directory",
    target_arch = "arm64",
)

# --- Public handles to the pinned x86_64 GCC distribution ------------------
# Repos created via use_repo_rule in this module's MODULE.bazel are only visible
# from within @sonic_build_infra. These aliases re-export the GCC driver + the
# full toolchain file set so other modules (e.g. @sonic-linux-kernel's
# kernel_build action, which shells out to `make`) can depend on them.
alias(
    name = "x86_64_gcc_driver",
    actual = "@gcc-linux-x86_64//:bin/x86_64-linux-gcc",
    visibility = ["//visibility:public"],
)

# Complete distribution file set (driver wrapper + real binaries, cc1/cc1plus
# under libexec, builtin headers, runtime libs, binutils). The kernel_build
# action stages this so the wrapped gcc driver can find its sub-programs.
alias(
    name = "x86_64_gcc_files",
    actual = "@gcc-linux-x86_64//:all_files",
    visibility = ["//visibility:public"],
)

# --- Public handles to the pinned aarch64 cross-GCC distribution -----------
# Mirror of the x86_64 aliases above for the arm64 cross toolchain
# (@gcc-linux-aarch64, prefix `aarch64-linux`). Consumed by
# @sonic-linux-kernel's kernel_build action when cross-compiling arm64.
alias(
    name = "aarch64_gcc_driver",
    actual = "@gcc-linux-aarch64//:bin/aarch64-linux-gcc",
    visibility = ["//visibility:public"],
)

alias(
    name = "aarch64_gcc_files",
    actual = "@gcc-linux-aarch64//:all_files",
    visibility = ["//visibility:public"],
)
